--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>This is my VERY BASIC Student Test website</h1>
+  <h1>LOL here's to testing </h1>
   
   <p>This is Emily and Sathya's website.</p>
 
