--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
 </head>
 <body>
 
-  <h1>LOL here's to testing </h1>
+  <h1>Emily and Sathya's Website</h1>
   
   <p>This is Emily and Sathya's website.</p>
+	<p2>About Us</p2>
 
   <li>item1</li>
   <li>item2</li>
+
+</body>
+
+<body>
+
+	<div>class="create"</div>
+<li><a href="Linux.html" target="_self">Linux</a></li>
+
 
 </body>
 </html>
