added cgi scripts

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
 <body>
 
-	<div>class="create"</div>
-<li><a href="Linux.html" target="_self">Linux</a></li>
+
+<li><a href="linux.html" target="_self">Linux</a></li>
+<li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
+<li><a href="/cgi-bin/student3/rpistatus.cgi" target= "_self">Pi Alive</a></li>
+
 
 
 </body>
