--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <p>This is Emily and Sathya's website.</p>
 	<p2>About Us</p2>
+		<p3>Emily is a senior and likes dogs.</p3>
 
   <li>item1</li>
   <li>item2</li>
@@ -20,7 +21,7 @@
 
 <li><a href="linux.html" target="_self">Linux</a></li>
 <li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
-<li><a href="/cgi-bin/student3/rpistatus.cgi" target= "_self">Pi Alive</a></li>
+<li><a href="/cgi-bin/student3/pialive.cgi" target= "_self">Pi Alive RPI Status</a></li>
 
 
 
