added a bunch of commands to linux reference place

--- a/linux1.html
+++ b/linux1.html
@@ -10,8 +10,16 @@
   <p>Linux Commands Reference Page.</p>
         <p2>About Us</p2>
 
-  <li></li>
-  <li>item2</li>
+  <li>ls - shows directory listing</li>
+  <li>cd - changes directory</li>
+  <li>rm - removes a file or directory</li>
+  <li>cp - copies the first file to the second, also creates second if it doesn't exist</li>
+  <li>mv - renames or moves the file</li>
+  <li>locate - finds all matching files</li>
+  <li>git push/pull - pushes or pulls files from a git repository</li>
+  <li>./configure - installs something from a source</li>
+  <li>nano - used to make and edit a file</li>
+  <li>
 
 
 <body>
