trying to add image

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,17 +8,13 @@
 
   <h1>Emily and Sathya's Website</h1>
   
-  <p>This is Emily and Sathya's website.</p>
-	<p2>About Us</p2>
-		<p3>Emily is a senior and likes dogs.</p3>
+  <h2>About Us</h2>
+	<p1>Emily is a senior and likes dogs.</p1>
+	<img1> src="/Users/Emily_Na/Desktop/emilyhtml.jpg" alt="Emily"</img1>
+	<p2> Sathya is also a senior. <p2/>
 
   <li>item1</li>
   <li>item2</li>
-
-</body>
-
-<body>
-
 
 <li><a href="linux.html" target="_self">Linux</a></li>
 <li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
