--- a/linux.html
+++ b/linux.html
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>APCSP Website</title>
+</head>
+<body>
+
+  <h1>Emily and Sathya's Website</h1>
+
+  <p>Linux Commands Reference Page.</p>
+        <p2>About Us</p2>
+
+  <li>ls - shows directory listing</li>
+  <li>cd - changes directory</li>
+  <li>rm - removes a file or directory</li>
+  <li>cp - copies the first file to the second, also creates second if it doesn't exist</li>
+  <li>mv - renames or moves the file</li>
+  <li>locate - finds all matching files</li>
+  <li>git push/pull - pushes or pulls files from a git repository</li>
+  <li>./configure - installs something from a source</li>
+  <li>nano - used to make and edit a file</li>
+  <li>
+
+
+<body>
+
+<p> Links to other pages <p>
+
+<li><a href="linux.html" target="_self">Linux</a></li>
+<li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
+<li><a href="/cgi-bin/student3/pialive.cgi" target= "_self">Pi Alive RPI Status$
+
+
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
   <title>Emily and Sathya' Website - Linux Commands Page</title>
 </head>
 <body>
@@ -11,7 +48,8 @@
 
   <li>ls: this displays the directory listing</li>
   <li>Example: if you are on your homepage, ls will display the directories</li>
-  <li>cd: this 
+  <li>cd: this returns user to homepage</li>
+  <li>cd dir: this changes directory to dir</li> 
 </body>
 
 <body>
