--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+ body {background-color: lightblue;}
+ h1 {color: lavender;}
+</style>
+</head>
+<head>
   <title>APCSP Website</title>
 </head>
 <body>
@@ -9,16 +15,15 @@
   <h1>Emily and Sathya's Website</h1>
   
   <h2>About Us</h2>
-	<p1>Emily is a senior and likes dogs.</p1>
-	<img1> src="/Users/Emily_Na/Desktop/emilyhtml.jpg" alt="Emily"</img1>
+	<p1> Emily is a senior and likes dogs.</p1>
 	<p2> Sathya is also a senior. <p2/>
 
-  <li>item1</li>
-  <li>item2</li>
 
 <li><a href="linux.html" target="_self">Linux</a></li>
 <li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
 <li><a href="/cgi-bin/student3/pialive.cgi" target= "_self">Pi Alive RPI Status</a></li>
+<li><a href="ourapp.php" target="_self">Basic Calculator for test sake</a></li>
+<li><a href="newlol.php" target="_self">Pls work lol</a></li>
 
 
 
