--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <li><a href="linux.html" target="_self">Linux</a></li>
 <li><a href="/cgi-bin/student3/pistatus.cgi" target= "_self">CGI Script</a></li>
 <li><a href="/cgi-bin/student3/pialive.cgi" target= "_self">Pi Alive RPI Status</a></li>
-<li><a href="new.php" target="_self">Sathya-FinalProject</a></li>
+<li><a href="new2.php" target="_self">Sathya-FinalProject</a></li>
 <li><a href="emily.php" target="_self">emily</a></li>
 
 
